Make project compatible with JDK 21